fixed modal window size and align quote to centre

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -271,10 +271,3 @@ button.btn.btn-primary {
 .admin-div {
   text-align: center;
 }
-
-.fa-home, .fa-heart {
-  color: rgb(58, 56, 56);
-  &:hover {
-    color: orange;
-  }
-}
